# CS-UBB-FMI-INFO

./: .gitattributes  .gitignore  README.md  package-lock.json
1st Year/Arhitectura Sistemelor de Calcul/PREGATIRE/: lab 2.asm  lab 2.lst  lab 3.asm  lab 3.lst  lab 4.asm  lab 4.lst  lab 5 ex 22.asm  lab 5 ex 22.lst  lab 5.asm  lab 5.lst  lab 6 ex 18.asm  lab 6 ex 18.lst  lab 6 ex 20.asm  lab 6 ex 20.lst  lab 6 ex 3.lst  lab 6.asm  lab 6.lst  lab 8 ex 12.asm  lab 8 ex 12.lst  lab 8 ex 23.asm  lab 8 ex 23.lst  lab 8 functii C.asm  lab 8 functii C.lst  lab 8.lst  probleme.asm  probleme.lst
1st Year/Arhitectura Sistemelor de Calcul/practic/: practic.asm  practic.lst
1st Year/Arhitectura Sistemelor de Calcul/sesiune/: new 1.asm  new 1.lst
1st Year/Fundamentele Programarii/Laboratoare/: main.py
1st Year/OOP/Laboratoare/lab2/: CMakeLists.txt  main.c  program
1st Year/OOP/Laboratoare/lab2/Domain/: tranzactie.c  tranzactie.h
1st Year/OOP/Laboratoare/lab2/Repository/: tranzactie_repo.c  tranzactie_repo.h
1st Year/OOP/Laboratoare/lab2/Service/: tranzactie_service.c  tranzactie_service.h
1st Year/OOP/Laboratoare/lab2/Teste/: test_domain.c  test_domain.h  test_repo.c  test_repo.h  test_service.c  test_service.h  test_validari.c  test_validari.h  tests.c  tests.h
1st Year/OOP/Laboratoare/lab2/UI/: tranzactie_ui.c  tranzactie_ui.h
1st Year/OOP/Laboratoare/lab2/Validari/: validari.c  validari.h
1st Year/OOP/Laboratoare/lab5/: CMakeLists.txt  CodeReview.docx  domain.c  domain.h  program  repo.c  repo.h  service.c  service.h  teste.c  teste.h  ui.c  ui.h  validari.c  validari.h  zmain.c
1st Year/OOP/Laboratoare/lab6-7/: CMakeLists.txt  main.cpp
1st Year/OOP/Laboratoare/lab6-7/Domain/: Carte.cpp  Carte.h
1st Year/OOP/Laboratoare/lab6-7/Repository/: Repository.cpp  Repository.h
1st Year/OOP/Laboratoare/lab6-7/Service/: Service.cpp  Service.h
1st Year/OOP/Laboratoare/lab6-7/Teste/: Teste.cpp  Teste.h
1st Year/OOP/Laboratoare/lab6-7/UI/: ui.cpp  ui.h
1st Year/OOP/Laboratoare/lab6-7/Validari/: validari.cpp  validari.h
1st Year/Sisteme de Operare/chestii/: 1.awk.save
1st Year/Sisteme de Operare/curs10/: miere  miere.c  plm.cpp
1st Year/Sisteme de Operare/curs4/: cod1.c  cod2.c  cod3.c  cod4.c  notite  raspuns_cod2  raspuns_cod3  raspuns_cod4
1st Year/Structuri de Date si Algoritmi/: App.cpp  Colectie.cpp  Colectie.h  TestScurt.cpp
3rd Year/IOC/lab3/: main.py
3rd Year/PPD/lab_in_class_s6/: CMakeLists.txt  main.cpp
3rd Year/PPD/tema_lab_1/tema_lab_1_C++/: CMakeLists.txt  ColoaneDinamic.cpp  ColoaneDinamic.h  ColoaneStatic.cpp  ColoaneStatic.h  LiniiDinamic.cpp  LiniiDinamic.h  LiniiStatic.cpp  LiniiStatic.h  SecventialDinamic.cpp  SecventialDinamic.h  SecventialStatic.cpp  SecventialStatic.h  Utils.cpp  Utils.h  main.cpp
3rd Year/PPD/tema_lab_1/tema_lab_1_C++/data/: date.txt  outputLiniiDinamic.txt  outputSecventialStatic.txt
(+2371 files in other folders)
