cmake_minimum_required(VERSION 3.27)
project(oopLab2_4)

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra")


add_executable(oopLab2_4
        domain.c
        domain.h
        repo.c
        repo.h
        service.c
        service.h
        ui.c
        ui.h
        validari.c
        validari.h
        zmain.c
        domain.c
        repo.c
        teste.c
        teste.h
        domain.c
)
